# atelier

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
atelier/: __init__.py  config.py  registry.py  train.py  trainer.py
atelier/adapters/: __init__.py  base.py  qwen_edit.py  qwen_image.py  sdxl.py
atelier/data/: __init__.py  cache.py  editing.py  generation.py
atelier/losses/: __init__.py  diffusion_cpo.py  diffusion_dpo.py  diffusion_ipo.py  diffusion_kto.py  diffusion_orpo.py  diffusion_simpo.py  epsilon.py  flow_matching.py  utils.py
configs/: qwen_image_lora_example.yaml
docs/: adapters.md  callbacks.md  deepspeed.md  loss-formulas.md
scripts/: encode_flammen.py  eval_flammen_lora.py  smoke_qwen_image_adapter.py  train_flammen_lora.py
tests/: conftest.py  helpers.py  test_adapters.py  test_config.py  test_data.py  test_losses.py  test_train_cli.py  test_trainer.py
