[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-diffusion"
version = "0.1.0"
description = "Simple, multi-GPU diffusion model fine-tuning library (Schneewolf Labs)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Schneewolf Labs" }]
requires-python = ">=3.10"
keywords = [
    "diffusion", "lora", "qwen-image", "sdxl", "fine-tuning",
    "schneewolf-labs", "atelier",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# NOTE: torch and diffusers are intentionally excluded — they're
# version/CUDA-specific and users must install them themselves.
# Pip will silently replace a pre-installed CUDA-matched torch with a
# generic PyPI build that breaks torchvision otherwise.
dependencies = [
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "tqdm>=4.60.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.41.0"]
logging = ["wandb>=0.15.0"]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/Schneewolf-Labs/atelier"
Repository = "https://github.com/Schneewolf-Labs/atelier"
Issues = "https://github.com/Schneewolf-Labs/atelier/issues"

[tool.setuptools.packages.find]
include = ["atelier*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
